@startuml

title __CLASESOBJETO's Class Diagram__\n

  namespace clasesObjeto {
    class clasesObjeto.ListAdapterCitas {
        + context : Context
        - mData : List<ListElement_Citas>
        - mInflater : LayoutInflater
        - originalItems : List<ListElement_Citas>
        + ListAdapterCitas()
        + ListAdapterCitas()
        + filter()
        + getItemCount()
        + onBindViewHolder()
        + onCreateViewHolder()
        + setItems()
    }
  }
  

  namespace clasesObjeto {
    class clasesObjeto.ListAdapterCitas.ViewHolder {
        ~ btElim : Button
        ~ btMod : Button
        ~ dbr : DatabaseReference
        ~ email : TextView
        ~ fecha : TextView
        ~ hora : TextView
        ~ mostrar : TextView
        ~ nombre : TextView
        ~ servicio : TextView
        ~ telefono : TextView
        ~ ViewHolder()
        ~ bindData()
    }
  }
  

  namespace clasesObjeto {
    class clasesObjeto.ListAdapterUsuarios {
        + context : Context
        - mData : List<ListElement_Usuarios>
        - mInflater : LayoutInflater
        + ListAdapterUsuarios()
        + ListAdapterUsuarios()
        + getItemCount()
        + onBindViewHolder()
        + onCreateViewHolder()
        + setItems()
    }
  }
  

  namespace clasesObjeto {
    class clasesObjeto.ListAdapterUsuarios.ViewHolder {
        ~ ap1 : TextView
        ~ ap2 : TextView
        ~ btElim : Button
        ~ btMod : Button
        ~ dbr : DatabaseReference
        ~ email : TextView
        ~ nTelf : TextView
        ~ nombre : TextView
        ~ usuario : TextView
        ~ ViewHolder()
        ~ bindData()
    }
  }
  

  namespace clasesObjeto {
    class clasesObjeto.ListElement_Citas {
        - email : String
        - fecha : String
        - hora : String
        - idCita : String
        - nTelf : String
        - nombre : String
        - servicio : String
        + ListElement_Citas()
        + getEmail()
        + getFecha()
        + getHora()
        + getIdCita()
        + getNombre()
        + getServicio()
        + getnTelf()
        + setEmail()
        + setFecha()
        + setHora()
        + setIdCita()
        + setNombre()
        + setServicio()
        + setnTelf()
    }
  }
  

  namespace clasesObjeto {
    class clasesObjeto.ListElement_Usuarios {
        - ap1 : String
        - ap2 : String
        - email : String
        - idUsuario : String
        - nTelf : String
        - nombre : String
        + ListElement_Usuarios()
        + getAp1()
        + getAp2()
        + getEmail()
        + getIdUsuario()
        + getNombre()
        + getnTelf()
        + setAp1()
        + setAp2()
        + setEmail()
        + setIdUsuario()
        + setNombre()
        + setnTelf()
    }
  }
  

  clasesObjeto.ListAdapterCitas -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  clasesObjeto.ListAdapterCitas +-down- clasesObjeto.ListAdapterCitas.ViewHolder
  clasesObjeto.ListAdapterCitas.ViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  clasesObjeto.ListAdapterUsuarios -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  clasesObjeto.ListAdapterUsuarios +-down- clasesObjeto.ListAdapterUsuarios.ViewHolder
  clasesObjeto.ListAdapterUsuarios.ViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
